Adding oneliner to simple for rebashing example

--- a/simple.html
+++ b/simple.html
@@ -14,7 +14,8 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content. Adding from Git
+			Just some content
+			This is an rebashing example
 		</p>
 	</main>
 	<footer class="container">
