--- a/simple.html
+++ b/simple.html
@@ -15,6 +15,7 @@
 	<!-- Content Goes Here -->
 		<p>
 			Just some content
+			This is an rebashing example
 		</p>
 	</main>
 	<footer class="container">
