--- a/simple.html
+++ b/simple.html
@@ -12,7 +12,9 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Content Goes Here 
+	Adding comment before conflict
+	-->
 		<p>
 			Just some content
 			This is an rebashing example
