--- a/simple.html
+++ b/simple.html
@@ -14,8 +14,7 @@
 	<main class="container">
 	<!-- Content Goes Here 
 	Adding comment before conflict
-		
-	Adding comment at branch 2nd time
+			rebash conflict
 	-->
 		<p>
 			Just some content
