mb conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -14,10 +14,13 @@
 	<main class="container">
 	<!-- Content Goes Here 
 	Adding comment before conflict
+		
+	Adding comment at branch 2nd time
 	-->
 		<p>
 			Just some content
 			This is an rebashing example
+			Adding comment at branch 2nd time
 		</p>
 	</main>
 	<footer class="container">
