Adding changes after rebasing conflict

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
-	<title>An Example Html- a new changes on master --ChangeConflick branch</title>
+	<title>An Example Html- a new changes on master --ChangeConflick branch
+--change after rebase
+	</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
