change simple.html at local

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>An Example Html- a new changes on master --ChangeConflick branch
---change after rebase
+	<title>An Example Html- a new changes on master 
 	</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
