Stash applied and dropped

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>An Example Html- a new changes on master 
+	<title>Updating for Stash example
 	</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
@@ -19,8 +19,7 @@
 	-->
 		<p>
 			Just some content
-			This is an rebashing example
-			Adding comment at branch 2nd time
+			Adding stash apply
 		</p>
 	</main>
 	<footer class="container">
