--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>Updating for Stash example
+	<title>TAg -a v-1.1
 	</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
